# canismajor

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conf.yaml  pyproject.toml
conf/stellarium/: config.ini
conf/systemd/user/: canismajor.service  stellarium.service
scripts/: gen_audio.py  qrcodes.py
src/: cli.py  hid.py  main.py  speech.py  stellarium.py
templates/: _canismajor_common.inc  _constellations.ssc  _earth.ssc  _earth_orbit.ssc  _objects.ssc  _planet_orbits.ssc  _sun.ssc  constellations.ssc  groups.ssc  objects.ssc  perseus2.ssc  story.ssc  zodiac2.ssc  zodiac_2.ssc
